--- a/Documentazione/sec/setup.tex
+++ b/Documentazione/sec/setup.tex
@@ -23,3 +23,13 @@ Si può infine procedere ad installare le dipendenze con il comando:
 \begin{lstlisting}
     mvn clean install
 \end{lstlisting}
+
+\noindent
+Ora il progetto può essere avviato con il comando:
+\begin{lstlisting}
+    mvn spring-boot:run
+\end{lstlisting}
+
+\noindent
+Per completare la configurazione è necessario inserire manualmente nel database, preferibilmente tramite pgAdmin, i valori corrispondenti ai tag e ai veicoli da utilizzare nell'applicazione.\\
+I valori previsti sono elencati nel contratto presente su StopLight.
